waves and category

--- a/apps/edge-k8s-applicationset.yaml
+++ b/apps/edge-k8s-applicationset.yaml
@@ -19,6 +19,8 @@ spec:
   template:
     metadata:
       name: '{{.name}}'
+      annotations:
+        argocd.argoproj.io/sync-wave: "2"
     spec:
       syncPolicy:
         automated:
