--- a/apps/crossplane-integration.yaml
+++ b/apps/crossplane-integration.yaml
@@ -19,6 +19,8 @@ spec:
   template:
     metadata:
       name: '{{.name}}-crossplane'
+      annotations:
+        argocd.argoproj.io/sync-wave: "1"
     spec:
       syncPolicy:
         automated:
