--- a/apps/workload-applicationset.yaml
+++ b/apps/workload-applicationset.yaml
@@ -12,6 +12,8 @@ spec:
   template:
     metadata:
       name: '{{name}}-workload'
+      annotations:
+        argocd.argoproj.io/sync-wave: "3"
     spec:
       syncPolicy:
         automated:
