--- a/apps/edge-k8s-applicationset.yaml
+++ b/apps/edge-k8s-applicationset.yaml
@@ -28,6 +28,7 @@ spec:
           selfHeal: true
         syncOptions:
           - CreateNamespace=true
+          - ServerSideApply=true
       project: default
       destination:
         name: ''
