--- a/apps/remote-capx.yaml
+++ b/apps/remote-capx.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: workload
+  name: capx
   namespace: argocd
 spec:
   generators:
@@ -11,7 +11,7 @@ spec:
           argocd.argoproj.io/secret-type: cluster
   template:
     metadata:
-      name: '{{name}}-workload'
+      name: '{{name}}-capx'
     spec:
       syncPolicy:
         automated:
@@ -22,14 +22,12 @@ spec:
       project: default
       source:
         repoURL: 'https://kubernetes-sigs.github.io/cluster-api-operator'
-        chart: capi-operator
+        chart: cluster-api-operator
         targetRevision: 0.5.0
-      helm:
-        parameters:
-          - name: infrastructure
-            value: "nutanix"
-          - name: cert-manager.enabled
-            value: "true"
+        helm:
+          parameters:
+            - name: cert-manager.enabled
+              value: "true"
       destination:
         server: '{{server}}'
         namespace: capi-operator-system
