--- a/apps/remote-capx.yaml
+++ b/apps/remote-capx.yaml
@@ -20,8 +20,11 @@ spec:
         syncOptions:
         - CreateNamespace=true
       project: default
-      source:
-        repoURL: 'https://kubernetes-sigs.github.io/cluster-api-operator'
+      destination:
+        server: '{{server}}'
+        namespace: capx-system
+      sources:
+      - repoURL: 'https://kubernetes-sigs.github.io/cluster-api-operator'
         chart: cluster-api-operator
         targetRevision: 0.5.0
         helm:
@@ -34,6 +37,6 @@ spec:
               value: capx-system
             - name: cert-manager.enabled
               value: "true"
-      destination:
-        server: '{{server}}'
-        namespace: capx-system
+      - repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd.git'
+        path: remote-capx
+        targetRevision: test1
