--- a/remote-capx/secret.yaml
+++ b/remote-capx/secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: nutanix-variables
-  namespace: capx-system
+  namespace: nutanix-infrastructure-system
 type: Opaque
 stringData:
   NUTANIX_ENDPOINT: pc.littlelab1.dachlab.net
