--- a/common-helm-charts/crossplane-infrastructure/templates/isolation-rule.yaml
+++ b/common-helm-charts/crossplane-infrastructure/templates/isolation-rule.yaml
@@ -3,8 +3,8 @@ kind: Workspace
 metadata:
   name: {{ .Values.cluster.name }}-isolation-rule
   namespace: {{ .Values.cluster.name }}
-  # annotations:
-  #   meta.upbound.io/example-id: tf/v1beta1/workspace
+  annotations:
+    meta.upbound.io/example-id: tf/v1beta1/workspace
 spec:
   forProvider:
     source: Inline
