--- a/common-helm-charts/crossplane-infrastructure/images/templates/provider.yaml
+++ b/common-helm-charts/crossplane-infrastructure/images/templates/provider.yaml
@@ -2,7 +2,7 @@ apiVersion: tf.upbound.io/v1beta1
 kind: ProviderConfig
 metadata:
   name: {{ .Values.cluster.name }}-providerconfig
-  namespace: {{ .Values.cluster.name }}
+  namespace: {{ .Values.cluster.name }}-infra
   annotations:
     "helm.sh/resource-policy": keep
     "argocd.argoproj.io/sync-options": Delete=false
