--- a/common-helm-charts/crossplane-infrastructure/images/templates/provider.yaml
+++ b/common-helm-charts/crossplane-infrastructure/images/templates/provider.yaml
@@ -16,7 +16,7 @@ spec:
         }
         backend "kubernetes" {
           secret_suffix     = "providerconfig-nutanix"
-          namespace         = "{{ .Values.cluster.name }}"
+          namespace         = "{{ .Values.cluster.name }}-infra"
           in_cluster_config = true
         }
       }
