--- a/common-helm-charts/crossplane-infrastructure/images/templates/images.yaml
+++ b/common-helm-charts/crossplane-infrastructure/images/templates/images.yaml
@@ -18,6 +18,7 @@ spec:
       }
   providerConfigRef:
     name: {{ .Values.cluster.name }}-providerconfig
+    namespace:  {{ .Values.cluster.name }}-infra
   writeConnectionSecretToRef:
     namespace:  {{ .Values.cluster.name }}-infra
     name: providerconfig-nutanix
