--- a/common-helm-charts/crossplane-infrastructure/images/templates/provider.yaml
+++ b/common-helm-charts/crossplane-infrastructure/images/templates/provider.yaml
@@ -2,7 +2,7 @@ apiVersion: tf.upbound.io/v1beta1
 kind: ProviderConfig
 metadata:
   name: {{ .Values.cluster.name }}-providerconfig
-  namespace: {{ .Values.cluster.name }}-infra
+  namespace: crossplane-system
   annotations:
     "helm.sh/resource-policy": keep
     "argocd.argoproj.io/sync-options": Delete=false
@@ -16,7 +16,7 @@ spec:
         }
         backend "kubernetes" {
           secret_suffix     = "providerconfig-nutanix"
-          namespace         = "{{ .Values.cluster.name }}-infra"
+          namespace         = "{{ .Values.cluster.name }}"
           in_cluster_config = true
         }
       }
