--- a/apps/infrastructure-integration.yaml
+++ b/apps/infrastructure-integration.yaml
@@ -30,7 +30,7 @@ spec:
           - CreateNamespace=true
       project: default
       destination:
-        name: ''
+        name: '{{.name}}-images'
         namespace: '{{.name}}'
         server: 'https://kubernetes.default.svc'
       source:
