--- a/common-helm-charts/crossplane-infrastructure/images/templates/images.yaml
+++ b/common-helm-charts/crossplane-infrastructure/images/templates/images.yaml
@@ -18,5 +18,5 @@ spec:
   providerConfigRef:
     name: {{ .Values.cluster.name }}-providerconfig
   writeConnectionSecretToRef:
-    namespace:  crossplane-system
-    name: providerconfig-nutanix
+    namespace:  {{ .Values.cluster.name }}
+    name: providerconfig-nutanix-images
