--- a/common-helm-charts/crossplane-infrastructure/images/templates/provider.yaml
+++ b/common-helm-charts/crossplane-infrastructure/images/templates/provider.yaml
@@ -11,13 +11,12 @@ spec:
           }
         }
         backend "kubernetes" {
-          secret_suffix     = "providerconfig-nutanix-images"
+          secret_suffix     = "backend-nutanix-images"
           namespace         = "{{ .Values.cluster.name }}"
           in_cluster_config = true
         }
       }
 
-      
       provider "nutanix" {
 
         username  = "{{ .Values.cluster.user }}"
