--- a/common-helm-charts/crossplane-infrastructure/images/templates/images.yaml
+++ b/common-helm-charts/crossplane-infrastructure/images/templates/images.yaml
@@ -1,7 +1,7 @@
 apiVersion: tf.upbound.io/v1beta1
 kind: Workspace
 metadata:
-  name: {{ .Values.cluster.name }}-images
+  name: workspace-{{ .Values.cluster.name }}-images
   annotations:
     meta.upbound.io/example-id: tf/v1beta1/workspace
 spec:
@@ -19,4 +19,4 @@ spec:
     name: {{ .Values.cluster.name }}-providerconfig
   writeConnectionSecretToRef:
     namespace:  {{ .Values.cluster.name }}
-    name: providerconfig-nutanix-images
+    name: connection-nutanix-images
