--- a/apps/flow-integration.yaml
+++ b/apps/flow-integration.yaml
@@ -44,6 +44,4 @@ spec:
               value: |
                 cluster:
                   name: "{{.name}}"
-                  endpoint: <path:secret/data/prismcentral/{{.prismcentral}}#endpoint>
-                  user: <path:secret/data/prismcentral/{{.prismcentral}}#user>
-                  pass: <path:secret/data/prismcentral/{{.prismcentral}}#pass>
+                  prismcentral: {{.prismcentral}}
