--- a/apps/flow-integration.yaml
+++ b/apps/flow-integration.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: crossplane-infrastructure
+  name: flow-rules
   namespace: argocd
 spec:
   goTemplate: true
@@ -18,7 +18,7 @@ spec:
           elementsYaml: "{{ .key.clusters | toJson }}"
   template:
     metadata:
-      name: '{{.name}}-crossplane'
+      name: '{{.name}}-flow'
       annotations:
         argocd.argoproj.io/sync-wave: "1"
     spec:
