--- a/mgmt/edge-k8s-clusters.yaml
+++ b/mgmt/edge-k8s-clusters.yaml
@@ -1,11 +1,11 @@
 key:
   clusters:
-    - name: littlelab1-prod
-      version: v1.27.4
-      controlplane_ip: 10.50.28.12
-      cluster: cluster1
-      prismcentral: littlelab1
-      subnet: vlan.145-cluster1
+    # - name: littlelab1-prod
+    #   version: v1.27.4
+    #   controlplane_ip: 10.50.28.12
+    #   cluster: cluster1
+    #   prismcentral: littlelab1
+    #   subnet: vlan.145-cluster1
     # - name: littlelab1-dev
     #   version: v1.27.4
     #   controlplane_ip: 10.50.28.245
@@ -18,9 +18,9 @@ key:
       cluster: crimson
       prismcentral: crimson-pc
       subnet: phx-routed-55-IPAM
-    - name: crimson-prod
-      version: v1.25.12
-      controlplane_ip: 10.48.38.37
-      cluster: crimson
-      prismcentral: crimson-pc
-      subnet: phx-routed-55-IPAM
+    # - name: crimson-prod
+    #   version: v1.25.12
+    #   controlplane_ip: 10.48.38.37
+    #   cluster: crimson
+    #   prismcentral: crimson-pc
+    #   subnet: phx-routed-55-IPAM
