labels and dashboard

--- a/apps/edge-k8s-applicationset.yaml
+++ b/apps/edge-k8s-applicationset.yaml
@@ -21,6 +21,9 @@ spec:
       name: '{{.name}}'
       annotations:
         argocd.argoproj.io/sync-wave: "2"
+      labels: 
+        cd-component: capx-cluster
+        environment: '{{.name}}'
     spec:
       syncPolicy:
         automated:
