--- a/apps/workload-applicationset.yaml
+++ b/apps/workload-applicationset.yaml
@@ -12,6 +12,9 @@ spec:
   template:
     metadata:
       name: '{{name}}-workload'
+      labels: 
+        cd-component: workload
+        environment: '{{name}}'
     spec:
       syncPolicy:
         automated:
