--- a/mgmt/prismcentral.yaml
+++ b/mgmt/prismcentral.yaml
@@ -2,7 +2,7 @@ key:
   prismcentral:
     - name: littlelab1
       subnet: vlan.145-cluster1
-    - name: littlelab2
-      subnet: vlan.145-cluster3
+    # - name: littlelab2
+    #   subnet: vlan.145-cluster3
     - name: crimson-pc
       subnet: phx-routed-55-IPAM
