--- a/common-helm-charts/crossplane-infrastructure/images/templates/images.yaml
+++ b/common-helm-charts/crossplane-infrastructure/images/templates/images.yaml
@@ -15,6 +15,13 @@ spec:
         source_uri = "https://capx-img.s3.eu-west-3.amazonaws.com/ubuntu-2204-kube-v1.27.4.qcow2"
         name = "ubuntu-2204-kube-v1.27.4"
       }
+      resource "nutanix_image" "source_image2" {
+
+        provider = nutanix
+
+        source_uri = "https://capx-img.s3.eu-west-3.amazonaws.com/ubuntu-2204-kube-v1.25.12.qcow2"
+        name = "ubuntu-2204-kube-v1.25.12"
+      }
   providerConfigRef:
     name: {{ .Values.cluster.name }}-providerconfig
   writeConnectionSecretToRef:
